# ynab-sync

./: .flake8  .gitignore  .isort.cfg  .travis.yml  Cargo.toml  LICENSE  README.md  categories.json  default.nix  ingdiba_rules.json  mypy.ini  n26_category_mapping.json  pyproject.toml  tox.ini  watch
.circleci/: config.yml
.vim/: coc-settings.json
nix/: sources.json
src/: error.rs  ingdiba.rs  lib.rs  logging.rs  n26.rs  rules.rs  ynab.rs
tests/: test_ynab_import.py
ynab_import/: dkb.py  ingdiba.py  n26.py  ynab.py
