[package]
name = "ynab-sync"
version = "0.1.0"
authors = ["Rok Garbas <rok@garbas.si>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/garbas/ynab-sync"
repository = "https://github.com/garbas/ynab-sync"
readme = "README.md"
description = "Sync transactions to your YNAB account"

[dependencies]
chrono = { version = "0.4.9", features = ["serde"] }
clap = "2.33.0"
failure = "0.1.5"
oauth2 = "1.3.0"
reqwest = "0.9.20"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
serde_str = "0.1.0"
dialoguer = "0.4.0"
console = "0.8.0"
clap-verbosity-flag = "0.2.0"
log = "0.4.8"
structopt = "0.3.1"
exitfailure = "0.5.1"
clap-log-flag = "0.2.1"
csv = "1.1.1"
encoding_rs = "0.8.19"
encoding_rs_io = "0.1.6"
rust-crypto = "0.2.36"
