[package]
name = "ynab-sync"
version = "0.1.0"
authors = ["Rok Garbas <rok@garbas.si>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/garbas/ynab-sync"
repository = "https://github.com/garbas/ynab-sync"
readme = "README.md"
description = "Sync transactions to your YNAB account"

[dependencies]
chrono = { version = "0.4.9", features = ["serde"] }
clap = "2.33.0"
clap-verbosity-flag = "0.3.0"
console = "0.9.1"
csv = "1.1.1"
dialoguer = "0.5.0"
dirs = "2.0.2"
encoding_rs = "0.8.20"
encoding_rs_io = "0.1.6"
exitfailure = "0.5.1"
failure = "0.1.6"
fern = "0.5.9"
log = "0.4.8"
reqwest = "0.10.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.44"
serde_str = "0.1.0"
structopt = "0.3.4"
url = "2.1.0"
