[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ynab-import"
version = "0.1.0"
description = ""
authors = ["Rok Garbas <rok@garbas.si>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = {version = "^3.7",allows-prereleases = true}
pdbpp = "^0.9.15"
mypy = "^0.700.0"
typing_extensions = "^3.7"
tox = "^3.9"

[tool.poetry.scripts]
sync-dkb = 'ynab_import.dkb:main'
sync-ingdiba = 'ynab_import.ingdiba:main'
sync-n26 = 'ynab_import.n26:main'
