[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ynab-import"
version = "0.1.0"
description = ""
authors = ["Rok Garbas <rok@garbas.si>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
black = {version = "^19.3b0",allows-prereleases = true}
flake8 = {version = "^3.7",allows-prereleases = true}
pdbpp = "^0.10.0"
mypy = "^0.701"
typing_extensions = "^3.7"
tox = "^3.12"
codecov = "^2.0"
pytest-cov = "^2.6"
flake8-coding = "^1.3"
flake8-debugger = "^3.1"
flake8-isort = "^2.7"
flake8-quotes = "^2.0"

[tool.poetry.scripts]
sync-dkb = 'ynab_import.dkb:main'
sync-ingdiba = 'ynab_import.ingdiba:main'
sync-n26 = 'ynab_import.n26:main'
